# ctm_ai_eval

./: .gitignore  README.md  hello.sh  pyproject.toml  pyrightconfig.json
assets/: example-config.toml
assets/data/: general_qa_python.json
assets/prompts/: judge_qa_msg.txt  judge_qa_sys.txt  needle_paraphrase.jinja  needle_paraphrase_sys.txt  needle_query.jinja  needle_query_sys.txt
assets/prompts/chat_system_prompts/: concise.txt  dummy.txt
experimental/: mlflow_opt.py  mlflow_qa_eval.py
notebooks/: show_results_haystack.ipynb  show_results_qa.ipynb
scripts/: llm_needle_example.py  prepare_needles.py  run_experiment.py
src/ctm_ai_eval/: common_config.py  io_util.py  rich_print.py  util.py
src/ctm_ai_eval/qa/: datamodels.py  eval_runs.py  judges.py  qa_experiment.py  qa_experiment_config.py  targets.py
src/ctm_ai_eval/rag/: ai_retriever.py  chunking.py  config.py  datamodels.py  dummy_retrievers.py  haystack_experiment.py  haystack_from_chunks.py  haystack_from_qa.py  metrics.py  needle_extraction.py  text_processing.py
src/ctm_ai_eval/rag/chunkers/: basic_chunking.py  chunk_markdown.py  validation.py
src/ctm_ai_eval/utils/: hashing.py  io_util.py  path_util.py  paths.py  plots.py
tests/: test_hashing.py  test_text_procecssing.py  test_utils.py
